--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -13,8 +13,12 @@
     <tr>
       <td><%= order.created_at %></td>
       <td><%= order.name %></td>
-      <td><%= %></td>
-      <td><%= order.status%></td>
+      <td>
+        <% order.order_details.each do |order_detail| %>
+        <%= order_detail.amount %>
+        <% end %>
+      </td>
+      <td><%= order.status %></td>
     </tr>
     <% end %>
   </tbody>
