--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -13,10 +13,12 @@
     <tr>
       <td><%= order.created_at %></td>
       <td><%= order.name %></td>
+      <% @sum = 0 %>
       <td>
         <% order.order_details.each do |order_detail| %>
-        <%= order_detail.amount %>
+        <% @sum += (order_detail.amount) %>
         <% end %>
+        <%= @sum %>
       </td>
       <td><%= order.status %></td>
     </tr>
