--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -6,11 +6,11 @@
   </tr>
   <tr>
     <td>注文日</td>
-    <td><%= @order.created_at %></td>
+    <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
   </tr>
   <tr>
     <td>配送先</td>
-    <td><%= @order.postal_code %><%= @order.address %><%= @order.name %></td>
+    <td>〒<%= @order.postal_code %> <%= @order.address %></br><%= @order.name %></td>
   </tr>
   <tr>
     <td>支払い方法</td>
@@ -18,7 +18,12 @@
   </tr>
   <tr>
     <td>注文ステータス</td>
-    <td><%= @order.status %></td>
+    <td>
+      <%= form_with model: @order, url: admin_order_path(@order), method: :patch, local: true do |f| %>
+      <%= f.select :status, Order.statuses.keys.map {|k| [I18n.t("enums.order.status.#{k}"), k]} %>
+      <%= f.submit "変更" %>
+      <% end %>
+    </td>
   </tr>
 </table>
 
@@ -40,9 +45,9 @@
         <td><%= (order_detail.item.price*1.1).floor %></td>
         <td><%= order_detail.amount %></td>
         <td><%= (order_detail.item.price*order_detail.amount*1.1).floor %></td>
-        <td><%=  form_with model:[:admin,order_detail], local:true do |f| %>
-            <%= f.select :making_status, {"制作不可": 0, "制作待ち": 1, "製作中": 2,"制作完了": 3}, {selected: 0}, { class: 'form-control' , required: true } %>
-            <%= f.submit "更新" %>
+        <td><%= form_with model: order_detail, url: admin_order_detail_path(order_detail), method: :patch, local: true do |f| %>
+　          <%= f.select :making_status, OrderDetail.making_statuses.keys.map {|k| [I18n.t("enums.order_detail.making_status.#{k}"), k]} %>
+　          <%= f.submit "変更" %>
             <% end %>
         </td>
       </tr>
