--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -55,5 +55,13 @@
             </li>
             <% end %>
         </ul>
+        <div class='row'>
+        <% if admin_signed_in? %>
+            <%= form_tag() do %>
+                 <%= text_field_tag :search %>
+            <%= submit_tag 'Search', :name => nil %>
+            <% end %>
+        <% end %>
+        </div>
     </div>
 </nav>
