--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -11,7 +11,7 @@
   <tbody>
     <% @orders.each do |order| %>
     <tr>
-      <td><%= order.created_at %></td>
+      <td><%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %></td>
       <td><%= order.name %></td>
       <% @sum = 0 %>
       <td>
@@ -20,7 +20,7 @@
         <% end %>
         <%= @sum %>
       </td>
-      <td><%= order.status %></td>
+      <td><%= order.status_i18n %></td>
     </tr>
     <% end %>
   </tbody>
