--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,59 +1,66 @@
-<h4>注文履歴詳細</h4>
-<h6>注文情報</h6>
-<table>
-  <thead>
-    <td>
-      <th>注文日</th>
-      <th>配送先</th>
-      <th>支払い方法</th>
-      <th>ステータス</th>
-    </td>
-  </thead>
-  <tbody>
-    <td>
-      <tr><%= @order.created_at %></tr>
-      <tr>〒<%= @order.postal_code %><%= @order.address %><%= @order.name %></tr>
-      <tr><%= @order.payment_method %></tr>
-      <tr><%= @order.status %></tr>
-    </td>
-  </tbody>
-</table>
-
-<h6>請求情報</h6>
-<table>
-  <thead>
-    <td>
-      <th>商品合計</th>
-      <th>配送料</th>
-      <th>ご請求額</th>
-    </td>
-  </thead>
-  <tbody>
-    <td>
-      <tr><%= @order.total_payment %></tr>
-      <tr>800</tr>
-      <tr><%= @order.total_payment+800 %></tr>
-    </td>
-  </tbody>
-</table>
-
-<h6>注文内容</h6>
-<table>
-  <thead>
-    <tr>
-      <th>商品</th>
-      <th>単価（税込）</th>
-      <th>個数</th>
-      <th>小計</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td><%= @order_detail.item.name %></td>
-      <td><%= @order_detail.item.price %></td>
-      <td><%= @order_detail.item.amount %></td>
-      <td><%= @order_detail.item.price %>*<%= @order_detail.item.amount %></td>
-      <td></td>
-    </tr>
-  </tbody>
-</table>
+<div class='container'>
+  <h4>注文履歴詳細</h4>
+    <div class='row'>
+      <div class='col-md-8'>
+        <h6>注文情報</h6>
+        <table class='table'>
+          <tr>
+            <th>注文日</th>
+            <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
+          </tr>
+          <tr>
+            <th>配送先</th>
+            <td>〒<%= @order.postal_code %></br><%= @order.address %></br><%= @order.name %></td>
+          </tr>
+          <tr>
+            <th>支払い方法</th>
+            <td><%= @order.payment_method %></td>
+          </tr>
+          <tr>
+            <th>ステータス</th>
+            <td><%= @order.status_i18n %></td>
+          </tr>
+        </table>
+      </div>
+      <div class='col-md-4'>
+        <h6>請求情報</h6>
+        <table class='table'>
+          <tr>
+            <th>商品合計</th>
+            <td><%= @order.total_payment-@order.shipping_cost %></td>
+          </tr>
+          <tr>
+            <th>配送料</th>
+            <td><%= @order.shipping_cost %></td>
+          </tr>
+          <tr>
+            <th>ご請求金額</th>
+            <td><%= @order.total_payment%></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <div class='row'>
+      <h6>注文内容</h6>
+      <table class='table'>
+        <thead>
+          <tr>
+            <th>商品</th>
+            <th>単価（税込）</th>
+            <th>個数</th>
+            <th>小計</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @order_details.each do |order_detail| %>
+          <tr>
+            <td><%= order_detail.item.name %></td>
+            <td><%= order_detail.item.price %></td>
+            <td><%= order_detail.amount %></td>
+            <td><%= order_detail.price*order_detail.amount %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+</div>
