--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,9 +1,9 @@
 <div class='container'>
   <div class='row'>
-    <div class='bg-light'><h4><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h4></div>
+    <div class='bg-light'><h4 class='ml-3 mb-3'><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h4></div>
   </div>
   <div class="row">
-    <div class='col-md-10 offset-md-1'>
+    <div class='col-md-10 col-md-offset-1'>
       <table class='table table-borderless'>
         <tr>
           <td>会員id</td>
