--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,23 +1,23 @@
 <h1>注文履歴詳細</h1>
-<table class='table'>
+<table class='table table-bordered'>
   <tr>
-    <td>購入者</td>
+    <th class='table-secondary'>購入者</th>
     <td><%= @order.customer.last_name %><%= @order.customer.first_name %></td>
   </tr>
   <tr>
-    <td>注文日</td>
+    <th class='table-secondary'>注文日</th>
     <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
   </tr>
   <tr>
-    <td>配送先</td>
+    <th class='table-secondary'>配送先</th>
     <td>〒<%= @order.postal_code %> <%= @order.address %></br><%= @order.name %></td>
   </tr>
   <tr>
-    <td>支払い方法</td>
+    <th class='table-secondary'>支払い方法</th>
     <td><%= @order.payment_method %></td>
   </tr>
   <tr>
-    <td>注文ステータス</td>
+    <th class='table-secondary'>注文ステータス</th>
     <td>
       <%= form_with model: @order, url: admin_order_path(@order), method: :patch, local: true do |f| %>
       <%= f.select :status, Order.statuses.keys.map {|k| [I18n.t("enums.order.status.#{k}"), k]} %>
@@ -28,8 +28,8 @@
 </table>
 
 
-<table class='table'>
-  <thead>
+<table class='table table-bordered'>
+  <thead class='table-secondary'>
     <tr>
       <th>商品名</th>
       <th>単価（税込）</th>
