--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,9 +1,9 @@
 <div class='container'>
   <div class='row'>
-    <h4><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報</h4>
+    <h4 class='ml-5 mb-3'><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報</h4>
   </div>
   <div>
-    <div class='col-md-10 offset-md-1'>
+    <div class='col-md-10 col-md-offset-1'>
       <%= form_with model:@customer,url: admin_customer_path(@customer), local: true do |f| %>
         <table class='table table-borderless'>
           <tr>
