--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,6 +1,6 @@
 <div class='container'>
   <div class='row'>
-    <h4>会員一覧</h4>
+    <h4 class='ml-3 mb-3'>会員一覧</h4>
   </div>
   <div class='row'>
     <div class='col-md-12'>
