--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,27 +1,35 @@
-<h1>注文履歴一覧</h1>
-<table class='table'>
-  <thead class='thead-light'>
-    <tr>
-      <th>購入日時</th>
-      <th>購入者</th>
-      <th>注文個数</th>
-      <th>注文ステータス</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @orders.each do |order| %>
-    <tr>
-      <td><%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %></td>
-      <td><%= order.name %></td>
-      <% @sum = 0 %>
-      <td>
-        <% order.order_details.each do |order_detail| %>
-        <% @sum += (order_detail.amount) %>
-        <% end %>
-        <%= @sum %>
-      </td>
-      <td><%= order.status_i18n %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class='container'>
+  <div class='row'>
+    <h4 class='ml-3 mb-3'>注文履歴一覧</h4>
+  </div>
+  <div class='row'>
+    <div class='col-md-12'>
+      <table class='table table-borderless'>
+        <thead class='table-secondary'>
+          <tr>
+            <th>購入日時</th>
+            <th>購入者</th>
+            <th>注文個数</th>
+            <th>注文ステータス</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @orders.each do |order| %>
+          <tr>
+            <td><%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %></td>
+            <td><%= order.name %></td>
+            <% @sum = 0 %>
+            <td>
+              <% order.order_details.each do |order_detail| %>
+              <% @sum += (order_detail.amount) %>
+              <% end %>
+              <%= @sum %>
+            </td>
+            <td><%= order.status_i18n %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
