--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,14 +1,14 @@
 
 <div class='container'>
   <div class ='row'>
-    <h2>商品一覧</h2><p>（全<%= @items.count %>件）</p>
+    <h2>商品一覧</h2><p class='mt-3'>（全<%= @items.count %>件）</p>
   </div>
   <div class='row mx-auto'　style="width: 200px;">
     <% @items.each do |item| %>
       <table class='col-md-3'>
         <tr>
           <td><%= link_to item_path(item) do %>
-            <%= attachment_image_tag(item, :image, :fill, 250, 250, fallback: "img/no_image.jpg") %>
+            <%= attachment_image_tag(item, :image, :fill, 250, 250, fallback: "img/no_image.jpg",size: "250x250") %>
             <% end %><br>
           </td>
         </tr>
