--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,29 +1,37 @@
-<h4>注文履歴一覧</h4>
-<table>
-  <thead>
-    <tr>
-      <th>注文日</th>
-      <th>配送先</th>
-      <th>注文商品</th>
-      <th>支払い金額</th>
-      <th>ステータス</th>
-      <th>注文詳細</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @orders.each do |order| %>
-    <tr>
-      <td><%= order.created_at %> </td>
-      <td>〒<%= order.postal_code %> <%= order.address %> <%= order.name %></td>
-      <td>
-        <% order.order_details.each do |order_detail| %>
-        <%= order_detail.item.name %>
-        <% end %>
-      </td>
-      <td><%= order.total_payment %></td>
-      <td><%= order.status %></td>
-      <td><%= link_to "表示する", order_path(order.id) %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+<dev class='container'>
+  <div class='row'>
+    <h3 class='ml-5 pl-5 mb-5 bg-light'>注文履歴一覧</h3>
+  </div>
+  <div class='row'>
+    <div class='col-md-11 mx-auto'>
+      <table class='table table-bordered'>
+        <thead class='table-secondary'>
+          <tr>
+            <th>注文日</th>
+            <th>配送先</th>
+            <th>注文商品</th>
+            <th>支払い金額</th>
+            <th>ステータス</th>
+            <th>注文詳細</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @orders.each do |order| %>
+          <tr>
+            <td><%= order.created_at.strftime('%Y/%m/%d') %> </td>
+            <td>〒<%= order.postal_code %></br><%= order.address %></br><%= order.name %></td>
+            <td>
+              <% order.order_details.each do |order_detail| %>
+              <%= order_detail.item.name %></br>
+              <% end %>
+            </td>
+            <td><%= order.total_payment %>円</td>
+            <td><%= order.status_i18n %></td>
+            <td><%= link_to "表示する", order_path(order.id), class: 'btn btn-primary' %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
