--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -28,7 +28,7 @@
               </td>
             </tr>
           <% end %>
-          <%= paginate @customer %>
+          <%= paginate @customers %>
         </tbody>
       </table>
 
