--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -28,6 +28,7 @@
             <td><%= order.status_i18n %></td>
           </tr>
           <% end %>
+           <%= paginate @orders %>
         </tbody>
       </table>
     </div>
