--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,8 +1,9 @@
 <div class="container">
+  <h3 class='ml-5 pl-5'>商品新規登録</h3>
 <%= form_with model: [ :admin, @item ], local: true do |f| %>
   <div class='row'>
     <div class='mx-auto'>
-      <table class='table　table-borderless'>
+      <table class='table　table-borderless' style='height: 400px'>
         <tr>
           <th>商品画像</th>
           <td>
@@ -16,7 +17,7 @@
         </tr>
          <tr>
           <th>商品説明</th>
-          <td><%= f.text_area :introduction %></td>
+          <td><%= f.text_area :introduction, :size=>"40" %></td>
         </tr>
          <tr>
           <th>ジャンル</th>
@@ -34,7 +35,7 @@
     </div>
   </div>
     <div class='row'>
-      <%= f.submit "変更を保存", class: "w-25 btn btn-success mx-auto"%>
+      <%= f.submit "新規登録", class: "btn btn-success mx-auto"%>
     </div>
   </div>
 <% end %>
