--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,61 +1,42 @@
-<%= form_with model: [ :admin, @item ], local: true do |f| %>
-<diV class="container admin-item-edit">
-
-<div class="row">
-  <h3 class="ml-5 mb-5 vg-light">商品編集</h3>
-<!--商品画像選択 -->
-</div>
-
-<div class="row">
- <div class"image">
-    <%= attachment_image_tag @item, :image, class: "img-square", size:"200x200" %>
-    <%= f.attachment_field :image, placeholder: "商品画像" %><br>
- </div>
-</div>
-<!--商品登録 -->
-
-
-  <div class="row">
-      <p class="col-lg-2">商品名</P>
-      <div class="field">
-      <%= f.text_field :name %>
-      </div>
-  </div>
-    
-  <div class="row">
-      <p class="col-lg-2">商品説明</p>
-      <div class="field">
-      <%= f.text_area :introduction %>
-      </div>
-  </div>
-    
-  <div class="row">
-      <p class="col-lg-2">ジャンル</p>
-      <div class="field">
-      <%= f.collection_select :genre_id, Genre.all, :id, :name %>
-      </div>
-  </div>
-    
-  <div class="row">
-      <p class="col-lg-2">税抜き価格</p>
-      <div class="field">
-      <%= f.text_field :price %>
-      </div>
-  </div>
-    
-  <div class="row">
-      <p class="col-lg-2">販売ステータス</p>
-      <div class=field>
-      <%= f.select :is_active, [['販売中', 'true'], ['販売停止中', 'false']] %>
-      </div>
-  </div>
-  
-  <!-- 投稿機能　-->
-    <div class="row mt-3">
-      <div class="col">
-      <%= f.submit "変更を保存", class: "btn btn-success"%>
+<div class="container">
+  <h3 class='ml-5 pl-5'>商品新規登録</h3>
+    <%= form_with model: [ :admin, @item ], local: true do |f| %>
+  <div class='row'>
+    <div class='mx-auto'>
+      <table class='table　table-borderless' style='height: 400px'>
+        <tr>
+          <th>商品画像</th>
+          <td>
+            <%= attachment_image_tag @item, :image, class: "img-square", size:"300x300" %>
+            <%= f.attachment_field :image, placeholder: "商品画像" %>
+          </td>
+        </tr>
+         <tr>
+          <th>商品名</th>
+          <td><%= f.text_field :name %></td>
+        </tr>
+         <tr>
+          <th>商品説明</th>
+          <td><%= f.text_area :introduction, :size=>"40" %></td>
+        </tr>
+         <tr>
+          <th>ジャンル</th>
+          <td> <%= f.collection_select :genre_id, Genre.all, :id, :name %></td>
+        </tr>
+         <tr>
+          <th>税抜価格</th>
+          <td><%= f.text_field :price %></td>
+        </tr>
+         <tr>
+          <th>販売ステータス</th>
+          <td><%= f.select :is_active, [["販売中","true"],["売り切れ","false"]], :prompt=>"選択してください" %></td>
+        </tr>
+      </table>
     </div>
-   </div>
-
+  </div>
+    <div class='row'>
+      <%= f.submit "変更を保存", class: "btn btn-success mx-auto"%>
+    </div>
+  </div>
 <% end %>
 </div>
