--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,38 +1,42 @@
-<div class="container admin-item-show">
-	
-	<h1 class="title">商品詳細</h1>
+<div class="container">
+
+	<h4>商品詳細</h4>
 	<div class="row">
 		<div class="image">
 		<%= attachment_image_tag @item, :image, :fill, 300, 300 %>
 		</div>
-		
-		<div class="item_intorodction">
-			<p class="name">商品名:<%= @item.name %></p>
-             <!--商品説明のデータを取得-->
-			<p class="introduction">
-				商品説明:
-				<%= @item.introduction %>
-			</p>
-			<p class="genre">
-				ジャンル:
-				<%= @item.genre.name %>
-			</p>
-			<p class="price">
-				税抜き価格（税込価格):
-				<%= @item.price %>円<%= (@item.price*1.1).floor %>円 
-			</p>
-			
-			<p class ="is_active">
-				販売ステータス:
-				<% if @item.is_active %></p>
-				<p>販売中</p>
-				<% else %>
-				<p>売り切れ</p>
-				<% end %>
-			
-		</div>
-		<div class="edit-btn">
+
+
+<table class='table table-borderless'>
+	<tr>
+		<th>商品名</th>
+		<td><%= @item.name %></td>
+	</tr>
+	<tr>
+		<th>商品説明</th>
+		<td><%= @item.introduction %></td>
+	</tr>
+	<tr>
+		<th>ジャンル</th>
+		<td><%= @item.genre.name %></td>
+	</tr>
+	<tr>
+		<th>税込価格</br>税抜価格</th>
+		<td><%= (@item.price*1.1).floor %>(<%= @item.price %>)円</td>
+	</tr>
+	<tr>
+		<th>販売ステータス</th>
+		<td>
+			<% if @item.is_active == true %>
+			販売中
+			<% else %>
+			販売停止中
+			<% end %>
+
+		</td>
+	</tr>
+</table>
+<div class="edit-btn">
 		<%= link_to '編集する', edit_admin_item_path(@item), class:"btn btn-outline-primary" %>
-		</div>
-	</div>
+</div>
 </div>
