--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,29 +1,41 @@
 <div class="container">
-  <div class="row">
-    <h5 class="mb-5">ジャンル一覧・追加</h5>
+  <div class="row ">
+    <h4 class="mb-5 bg-light">ジャンル一覧・追加</h4>
   </div>
 
   <%= form_with model: [ :admin, @genre ], local: true do |f| %>
-  <table>
-    <tr class="row">
-      <th class=mr-5>ジャンル名</th>
-      <td class="mr-5">
-        <%= f.text_field :name %>
-      </td>
-      <td class="sbmit">
-        <%= f.submit "新規登録", class: "btn btn-success" %>
-      </td>
-    </tr>
-  </table>
+  <div class="row">
+    <div class="col-md-5">
+      <table class="table table-borderless">
+        <tr>
+          <th>ジャンル名</th>
+          <td>
+            <%= f.text_field :name %>
+          </td>
+          <td>
+            <%= f.submit "新規登録", class: "btn btn-success" %>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
   <% end %>
-    <table class="table">
-      <tr>
-        <th>ジャンル</th>
-        <% @genres.each do |genre| %>
-        <td><%= genre.name %>
-        <%= link_to '編集する', edit_admin_genre_path(genre.id), class: "ml-5 btn btn-success" %>
-        </td>
-      </tr>
-        <% end %>
-    </table>
+  <div class="row">
+    <div class="col-md-4">
+      <table class="table">
+        <tr class="table-secondary text-center">
+          <th>ジャンル</th>
+          <th></th>
+        </tr>
+        <tr>
+          <% @genres.each do |genre| %>
+          <td><%= genre.name %></td>
+          <td>
+          <%= link_to '編集する', edit_admin_genre_path(genre.id), class: "ml-5 btn btn-success" %>
+          </td>
+        </tr>
+          <% end %>
+      </table>
+    </div>
+  </div>
 </div>
