--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -8,26 +8,26 @@
 	<table class='table table-bordered'>
 	  <thead class='table-secondary'>
       <tr>
-        <th>商品名</th>
-        <th>単価（税込）</th>
-        <th>数量</th>
-        <th>小計</th>
-        <th><!--ボタン用--></th>
+        <th class="border-dark">商品名</th>
+        <th class="border-dark">単価（税込）</th>
+        <th class="border-dark">数量</th>
+        <th class="border-dark">小計</th>
+        <th class="border-dark"><!--ボタン用--></th>
       </tr>
     </thead>
     <tbody>
       <% @sum = 0 %>
 	    <% @cart_items.each do |cart_item| %>
 		    <tr>
-		        <td><%= attachment_image_tag(cart_item.item, :image, :fill, 45, 45, fallback: "img/no_image.jpg",size: "45x45") %><%= cart_item.item.name %></td>
-		        <td><%= (cart_item.item.price*1.1).floor %></td>
-		        <td><%= form_with model:cart_item, url: cart_item_path(cart_item), local:true do |f| %>
+		        <td class="border-dark"><%= attachment_image_tag(cart_item.item, :image, :fill, 45, 45, fallback: "img/no_image.jpg",size: "45x45") %><%= cart_item.item.name %></td>
+		        <td class="border-dark"><%= (cart_item.item.price*1.1).floor %></td>
+		        <td class="border-dark"><%= form_with model:cart_item, url: cart_item_path(cart_item), local:true do |f| %>
   		            <%= f.number_field :amount, min: 1 %>
   		            <%= f.submit "変更", class: 'btn btn-success' %>
   		          <% end %>
 		        </td>
-		        <td><%= (cart_item.item.price*1.1*cart_item.amount).floor %></td>
-		        <td><%= link_to '削除する', cart_item_path(cart_item), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-danger"%></td>
+		        <td class="border-dark"><%= (cart_item.item.price*1.1*cart_item.amount).floor %></td>
+		        <td class="border-dark text-center"><%= link_to '削除する', cart_item_path(cart_item), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-danger"%></td>
 		        <% @sum += (cart_item.item.price*1.1*cart_item.amount).floor %>
 		    </tr>
 	    <% end %>
