--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,42 +1,52 @@
 <div class="container">
 
-	<h4>商品詳細</h4>
+	<div class="row mb-5 ml-5">
+		<h4 class="bg-light pr-3 pl-3">商品詳細</h4>
+	</div>
+
 	<div class="row">
-		<div class="image">
-		<%= attachment_image_tag @item, :image, :fill, 300, 300 %>
+		<div class="col-4">
+			<%= attachment_image_tag @item, :image, :fill, 300, 200 %>
 		</div>
 
+			<table class='col-4 table table-borderless'>
+				<tr>
+					<td>商品名</td>
+					<td><%= @item.name %></td>
+				</tr>
 
-<table class='table table-borderless'>
-	<tr>
-		<th>商品名</th>
-		<td><%= @item.name %></td>
-	</tr>
-	<tr>
-		<th>商品説明</th>
-		<td><%= @item.introduction %></td>
-	</tr>
-	<tr>
-		<th>ジャンル</th>
-		<td><%= @item.genre.name %></td>
-	</tr>
-	<tr>
-		<th>税込価格</br>税抜価格</th>
-		<td><%= (@item.price*1.1).floor %>(<%= @item.price %>)円</td>
-	</tr>
-	<tr>
-		<th>販売ステータス</th>
-		<td>
-			<% if @item.is_active == true %>
-			販売中
-			<% else %>
-			販売停止中
-			<% end %>
+				<tr>
+					<td>商品説明</td>
+					<td><%= @item.introduction %></td>
+				</tr>
 
-		</td>
-	</tr>
-</table>
-<div class="edit-btn">
-		<%= link_to '編集する', edit_admin_item_path(@item), class:"btn btn-outline-primary" %>
-</div>
+				<tr>
+					<td>ジャンル</td>
+					<td><%= @item.genre.name %></td>
+				</tr>
+
+				<tr>
+					<td>税込価格</br>(税抜価格)</td>
+					<td><%= (@item.price*1.1).floor %>(<%= @item.price %>)円</td>
+				</tr>
+
+				<tr>
+					<td>販売ステータス</td>
+					<th class="text-success">
+						<% if @item.is_active == true %>
+						販売中
+						<% else %>
+						販売停止中
+						<% end %>
+					</th>
+				</tr>
+
+				<tr>
+					<td>
+						<%= link_to '編集する', edit_admin_item_path(@item), class:"ml-4 btn btn-success" %>
+					</td>
+				</tr>
+
+			</table>
+		</div>
 </div>
