--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -83,7 +83,7 @@
       <%= f.hidden_field :name, :value => @order.name %>
       <%= f.hidden_field :postal_code, :value => @order.postal_code %>
       <%= f.hidden_field :sum, :value => @sum %>
-      <%= f.submit %>
+      <%= f.submit "注文確定する", class: "btn btn-success" %>
     <% end %>
   </div>
 </div>
