--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -16,7 +16,11 @@
         <tbody>
           <% @orders.each do |order| %>
           <tr>
-            <td><%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %></td>
+            <td>
+              <%= link_to admin_order_path(order) do %>
+              <%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %>
+              <% end %>
+            </td>
             <td><%= order.name %></td>
             <% @sum = 0 %>
             <td>
